# project-02807

./: .gitattributes  .gitignore  README.md  ctm_general_notebook.ipynb  ctms_column_summary.json  data_movies.ipynb  kmeans_tuning_results.json  main.ipynb  pyproject.toml
archive/: ctms_general.py  embeddings_general.py
config/: plotting_config.py
data/: ctms_clusters.pkl  ctms_distance_matrix.npy
data/ctms/: summary.csv  tt0026138_traj.npy  tt0029583_traj.npy  tt0032138_traj.npy  tt0040076_traj.npy  tt0045152_traj.npy  tt0050212_traj.npy  (+86 more)
dataset_construction/: clean_metadata.py  dataset_builder.py  inspect_dataset.py  main.py  metadata_cleaned.csv  midi_to_wav.py  readme.md
models/: classical.py  classical_graph.py  cluster.py  graph.py
notebooks/: CTMs_based_clustering.ipynb  CTMs_essentials.ipynb  ctjs.ipynb  ctms_tfidf_cluster_summary.json  data_movies.ipynb  eda.ipynb  fetch_vgmusic.ipynb  graph_viz.ipynb  merge_notebooks.py  metadata_pitch_clustering.ipynb  minhash_similarities.ipynb  movie_pipeline.ipynb  node_ctm_clustering.ipynb  part2.ipynb  pitch_based_clustering.ipynb  readme.md  tfidf_val.ipynb
sandbox/: baseline_plots.py  genre_distribution.py  raw_plots.py
scripts/: ctms_general.py  embeddings_general.py  features.py  readme.md  report_plots.py  tfidf_similarity.py
utils/: evaluation.py  fetch_vgmusic.ipynb  frobenius.py  graph_clustering.py  graph_visualization.py  hash.py  internal_validation_metrics.py  kl_matrix.py  load.py  mahalanobis.py  metrics.py  pitch.py  plot.py  shingles.py  tf_idf.py
writing/: overview.md
(+1219 files in other folders)
