[project]
name = "project-02807"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fa2-modified>=0.4",
    "graphviz>=0.21",
    "igraph>=1.0.0",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "midi2audio>=0.1.1",
    "nbconvert[webpdf]>=7.16.6",
    "nbformat>=5.10.4",
    "nbmerge>=0.0.4",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandoc>=2.4",
    "pretty-midi>=0.2.11",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
